WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162481
REGRESSION (206001): Scrubbed video on Youtube stops playing
https://bugs.webkit.org/show_bug.cgi?id=162481
Summary
REGRESSION (206001): Scrubbed video on Youtube stops playing
Jer Noble
Reported
2016-09-22 23:27:36 PDT
REGRESSION (206001): Scrubbed video on Youtube stops playing
Attachments
Patch
(14.50 KB, patch)
2016-09-22 23:39 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-09-22 23:28:28 PDT
<
rdar://problem/28436707
>
Jer Noble
Comment 2
2016-09-22 23:39:07 PDT
Created
attachment 289664
[details]
Patch
WebKit Commit Bot
Comment 3
2016-09-22 23:41:45 PDT
Attachment 289664
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/mock/mediasource/MockSourceBufferPrivate.cpp:235: 'sample' is incorrectly named. It should be named 'protector' or 'protectedPrpSample'. [readability/naming/protected] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 4
2016-09-23 08:31:00 PDT
Comment on
attachment 289664
[details]
Patch Clearing flags on attachment: 289664 Committed
r206300
: <
http://trac.webkit.org/changeset/206300
>
Jer Noble
Comment 5
2016-09-23 08:31:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug