Source/WebCore/Modules/mediasource/SourceBuffer.h
@@ -195,6 +195,7 @@ private:
     // Internals
     friend class Internals;
     WEBCORE_EXPORT Vector<String> bufferedSamplesForTrackID(const AtomicString&);
+    WEBCORE_EXPORT Vector<String> enqueuedSamplesForTrackID(const AtomicString&);
 
     Ref<SourceBufferPrivate> m_private;
     MediaSource* m_source;
