Source/WebCore/platform/mock/mediasource/MockSourceBufferPrivate.h
@@ -67,16 +67,19 @@ private:
     MediaPlayer::ReadyState readyState() const override;
     void setReadyState(MediaPlayer::ReadyState) override;
 
-    void flushAndEnqueueNonDisplayingSamples(Vector<RefPtr<MediaSample>>, AtomicString) override { }
+    void flushAndEnqueueNonDisplayingSamples(Vector<RefPtr<MediaSample>>, AtomicString) override { m_enqueuedSamples.clear(); }
     void enqueueSample(PassRefPtr<MediaSample>, AtomicString) override;
     bool isReadyForMoreSamples(AtomicString) override { return true; }
     void setActive(bool) override;
+
+    Vector<String> enqueuedSamplesForTrackID(AtomicString) override;
 
     void didReceiveInitializationSegment(const MockInitializationBox&);
     void didReceiveSample(const MockSampleBox&);
 
     MockMediaSourcePrivate* m_mediaSource;
     SourceBufferPrivateClient* m_client;
+    Vector<String> m_enqueuedSamples;
 
     Vector<char> m_inputBuffer;
 };
